<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AnimationActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/a11"
        />

        <Button
            android:id="@+id/btn_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/image"
            android:layout_marginTop="10dp"
            android:text="@string/btn_animation_frame_start"
            />
    <Button
        android:id="@+id/btn_frameStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/btn_frame"
        app:layout_constraintTop_toBottomOf="@+id/image"
        android:layout_marginTop="10dp"
        android:text="@string/btn_animation_frame_stop"
        />

    <Button
        android:id="@+id/btn_alpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/btn_frameStop"
        app:layout_constraintTop_toBottomOf="@+id/image"
        android:layout_marginTop="10dp"
        android:text="@string/btn_animation_alpha"
        />

    <Button
        android:id="@+id/btn_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/btn_alpha"
        app:layout_constraintTop_toBottomOf="@+id/image"
        android:layout_marginTop="10dp"
        android:text="@string/btn_animation_set"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@android:color/holo_blue_light"
        app:layout_constraintTop_toBottomOf="@+id/btn_frame"

        />

    <TextView
        android:id="@+id/textview_animator_propertyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_animator_property"
        app:layout_constraintTop_toBottomOf="@+id/btn_frame"
        android:layout_marginTop="6dp"
        />

    <Button
        android:id="@+id/btn_animator_alpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textview_animator_propertyName"
        android:layout_marginTop="10dp"
        android:text="@string/btn_animator_property_alpha"
        />


    <Button
        android:id="@+id/btn_animator_rotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/btn_animator_alpha"
        app:layout_constraintTop_toBottomOf="@+id/textview_animator_propertyName"
        android:layout_marginTop="10dp"
        android:text="@string/btn_animator_property_rotation"
        />

    <Button
        android:id="@+id/btn_animator_scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/btn_animator_rotation"
        app:layout_constraintTop_toBottomOf="@+id/textview_animator_propertyName"
        android:layout_marginTop="10dp"
        android:text="@string/btn_animator_property_scale"
        />

    <Button
        android:id="@+id/btn_animator_translation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/btn_animator_scale"
        app:layout_constraintTop_toBottomOf="@+id/textview_animator_propertyName"
        android:layout_marginTop="10dp"
        android:text="@string/btn_animator_property_translation"
        />

    <Button
        android:id="@+id/btn_animator_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/btn_animator_translation"
        app:layout_constraintTop_toBottomOf="@+id/textview_animator_propertyName"
        android:layout_marginTop="10dp"
        android:text="@string/btn_animator_property_set"
        />

</android.support.constraint.ConstraintLayout>